Fix TreeView toggle item visibility icons are not properly aligned to item icons in the Material theme (T674241) (#5476)

--- a/styles/widgets/material/treeView.material.less
+++ b/styles/widgets/material/treeView.material.less
@@ -17,7 +17,7 @@
     @MATERIAL_SELECT_ALL_ITEM_PADDING: 15px 0 15px @MATERIAL_SELECT_ALL_ITEM_OFFSET -  @MATERIAL_TREEVIEW_TOGGLE_ITEM_WIDTH;
     @MATERIAL_SELECT_ALL_ITEM_LEFT_PADDING: 26px;
 
-    @MATERIAL_TREEVIEW_ITEM_PADDING: 15px 8px;
+    @MATERIAL_TREEVIEW_ITEM_PADDING: 12px 8px;
     @MATERIAL_TREEVIEW_MIN_ITEM_HEIGHT: 48px;
 
     @MATERIAL_TREEVIEW_ITEM_WITH_CHECKBOX_OFFSET: @MATERIAL_TREEVIEW_CHECKBOX_OFFSET + 5;
@@ -163,6 +163,7 @@
 .dx-treeview-item {
     padding: @MATERIAL_TREEVIEW_ITEM_PADDING;
     min-height: @MATERIAL_TREEVIEW_MIN_ITEM_HEIGHT;
+    line-height: @MATERIAL_TREEVIEW_MIN_ITEM_HEIGHT / 2;
 
     .dx-icon {
         .dx-icon-sizing(@MATERIAL_BASE_ICON_SIZE);
